--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,11 +7,11 @@ on:
     branches: [ master ]
 jobs:
   build-unix:
-    runs-on: ${{ matrix.os }}-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         channel: [stable, beta, nightly]
-        os: [ubuntu, macos]
+        os: [ubuntu-latest, macos-latest, macos-10.15]
     steps:
     - uses: actions/checkout@v2
     - run: rustup default ${{ matrix.channel }}
